<resources>
    <string name="app_name">LuanVanNew</string>

    <string name="action_user">User</string>
    <string name="action_category">Categories</string>
    <string name="action_search">Search</string>
    <string name="action_style">Style</string>
    <string name="action_playlist">Playlist</string>
    <string name="action_setting">Setting</string>
    <string name="action_music">Music</string>

    <string name="category_button">Categories</string>
    <string name="style_button">Styles</string>
    <string name="category_tab_title_song">Songs</string>
    <string name="category_tab_title_album">Albums</string>
    <string name="category_tab_title_hot">Hot</string>
    <string name="category_header_title">Categories</string>
    <string name="style_header_title">Styles</string>

    <string name="hot_albums_title_bar">Hot Albums</string>
    <string name="hot_songs_title_bar">Hot Songs</string>
    <string name="view_all">view all</string>

    <string name="action_play_all">Play All</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_done">Done</string>
    <string name="action_OK">OK</string>
    <string name="delete_playlist_message">Do you want to delete all song?</string>
    <string name="delete_playlist_song">Do you want to delete this song?</string>
    <string name="delete_message">Do you want to delete?</string>
    <string name="delete_a_playlist_message">Do you want to delete this playlist?</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_message">Do you want to clear search history?</string>
    <string name="clear_all_message">Do you want to clear all search history?</string>
    <string name="have_not_login">You still haven\'t logged in.</string>
    <string name="exist_message">has already existed.</string>

    <!--Search-->
    <string name="search_history">Search history</string>
    <string name="clear_history">Clear all</string>
    <string name="searching_for_songs">Searching for songs</string>
    <string name="searching_for">Searching for </string>
    <string name="search_for_title">Searching for:</string>
    <string name="songs_title">Songs</string>
    <string name="albums_title">Albums</string>
    <string name="artists_title">Artists</string>
    <string name="composers_title">Composers</string>
    <string name="top_song_view">Top songs</string>
    <string name="title_search_result_1">Have</string>
    <string name="title_search_result_2">results is founded for</string>
    <string name="updating">Updating</string>

    <!--Setting-->
    <string name="title_setting">Settings</string>
    <string name="title_player_setting">Music Player</string>
    <string name="title_search_setting">Search setting</string>
    <string name="title_language_setting">Languages</string>
    <string name="button_change">Change</string>
    <string name="play_in_background">Play in background</string>
    <string name="Continue_to_play_plug_headphone">Continue to play when headphone is attached</string>
    <string name="Continue_to_play_remove_headphone">Continue to play when headphone is removed</string>
    <string name="Auto_stop_play">Auto stop playing music</string>
    <string name="save_seach_history">Save search history</string>
    <string name="language_title">Change language</string>
    <string name="timer">Timer</string>
    <string name="new_value">Other value (minutes):</string>
    <string name="not_higher_200">&lt;= 200</string>

    <!--login-->
    <string name="title_login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="field_require">Field required.</string>
    <string name="login_fail">Login failed...</string>
    <string name="error_message">Email or password is incorrect.</string>
    <string name="warning_message">Please enter email and password.</string>

    <!--play in background-->
    <string name="app_version_number">1.0</string>
    <string name="menu_settings">Settings</string>

    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile_title">My Profile</string>
    <string name="logout">Logout</string>
    <string name="my_playlist">My Playlist</string>
    <string name="name">NAME</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="email">EMAIL</string>
    <string name="nick_chat">NICK CHAT</string>
    <string name="level">LEVEL</string>

    <string-array name="spiner">
        <item>None</item>
        <item>1 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
    </string-array>

    <string name="language_english" translatable="false">English</string>
    <string-array name="language_names">
        <item>@string/language_english</item>
        <item>@string/language_vietnamese</item>
    </string-array>
    <string name="language_english_code" translatable="false">en</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>
    <string-array name="language_codes">
        <item>@string/language_english_code</item>
        <item>@string/language_vietnamese_code</item>
    </string-array>

    <string name="no_internet">No internet</string>
    <string name="playlist_song_added">Song has already existed.</string>
    <string name="success_add_playlist">Song has added to playlist.</string>
    <string name="language_vietnamese" translatable="false">Vietnamese</string>
    <string name="song_s">song(s)</string>
    <string name="action_musics">Music >></string>
    <string name="create_playlist">New playlist</string>
    <string name="song_info_title">Song Information</string>
    <string name="name_title">Name:</string>
    <string name="request_login">You still haven\'t logged in.</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="play_list_song">Song play list</string>
    <string name="languages">Languages</string>
    <string name="not_set_timer">You haven\'t set auto stop playing music\'s timer.</string>
</resources>
