<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tiennguyen.luanvannew.MainActivity">
    <item
        android:id="@+id/action_user"
        android:enabled="true"
        android:icon="@drawable/ic_user_grey"
        android:title="@string/action_user"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_music"
        android:enabled="true"
        android:icon="@drawable/ic_music"
        android:title="@string/action_music"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_grey"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_playlist"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_folder"
        android:title="@string/action_playlist"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/action_setting"
        app:showAsAction="ifRoom" />
</menu>