<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height_40dp"
        android:background="@drawable/bg_header">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_category_button"
            android:gravity="center"
            android:paddingStart="@dimen/dimen_8dp"
            android:paddingEnd="@dimen/dimen_8dp"
            android:layout_toStartOf="@+id/tab_title">
            <TextView
                android:id="@+id/tvCategoriesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_button"
                android:textColor="@drawable/categories_button_text"
                android:textSize="10sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_title"
            android:layout_width="@dimen/tab_title_width"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            >
            <LinearLayout
                android:id="@+id/tabSongs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/tab_title_item_left_background"
                >
                <TextView
                    android:id="@+id/tvTabSongs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_tab_title_song"
                    android:textSize="@dimen/tab_title_text_size"
                    android:textColor="@drawable/tab_title_color"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tabHot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/tab_title_item_center_background">
                <TextView
                    android:id="@+id/tvTabHot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_tab_title_hot"
                    android:textSize="@dimen/tab_title_text_size"
                    android:textColor="@drawable/tab_title_color"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tabAlbums"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/tab_title_item_right_background">
                <TextView
                    android:id="@+id/tvTabAlbums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_tab_title_album"
                    android:textSize="@dimen/tab_title_text_size"
                    android:textColor="@drawable/tab_title_color"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_styles_button"
            android:gravity="center"
            android:paddingStart="@dimen/dimen_8dp"
            android:paddingEnd="@dimen/dimen_8dp"
            android:layout_toEndOf="@+id/tab_title">
            <TextView
                android:id="@+id/tvStylesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style_button"
                android:textColor="@drawable/categories_button_text"
                android:textSize="10sp"
                />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlack">
    </LinearLayout>
</LinearLayout>